@@ -124,11 +124,13 @@ _valid_gid(struct passwd *pwd, gid_t *gid)
 	}
 
 	/* Allow user root to use any valid gid */
-	if (pwd->pw_uid == 0)
+	if (pwd->pw_uid == 0) {
+		pwd->pw_gid = *gid;
 		return 1;
-
+	}
 	for (i = 0; grp->gr_mem[i]; i++) {
 	       	if (strcmp(pwd->pw_name,grp->gr_mem[i]) == 0) {
+			pwd->pw_gid = *gid;
 		       	return 1;
 	       	}
 	}
