@@ -35,7 +35,9 @@ documents those changes that are of interest to users and admins.
  -- If a DOWN node is resumed, set its state to IDLE & NOT_RESPONDING and 
     ping the node immediately to clear the NOT_RESPONDING flag.
  -- Log that a job's time limit is reached, but don't sent SIGXCPU.
- 
+ -- Fixed gid to be set in slurmstepd when run by root
+ -- Changed getpwent to getpwent_r in the slurmctld and slurmd
+
 * Changes in SLURM 1.3.6
 ========================
  -- Add new function to get information for a single job rather than always
